--- a/index.html
+++ b/index.html
@@ -111,18 +111,31 @@
                             <label for="address">Enter Street Address, Location, or Town</label>
                             <input type="text" class="form-control" id="address" placeholder="Enter Address" onkeydown="if (event.keyCode == 13) {document.getElementById('submit-to-google-a').click();}">
                         </div>
-                        <div id="slider"></div>
-                        <button id="find-location" type="button" class="btn btn-default btn-xl" style="border: none; padding: 0;"><a id="find-location-a" href="#start" class="btn btn-default btn-xl page-scroll">Find Location</a></button>
-                        <hr>
-                        <button id="submit-to-google" type="submit" class="btn btn-default btn-xl" style="border: none; padding: 0;"><a id="submit-to-google-a" href="#map" class="btn btn-default btn-xl page-scroll"  onclick="$(this).closest('form').submit()">Submit</a></button>
-                    </form>
+                        <div class="form-group-lg" style="text-align: left; padding-bottom: 3vh; padding-top: 3vh">
+                            <label for="money-range">Restaurant Value</label>
+                            <input type="range" id="money-range">
+                        </div>
+                        <div class="form-group-lg">
+                            <button id="find-location" type="button" class="btn btn-default btn-xl" style="border: none; padding: 0;">
+                                <a id="find-location-a" href="#start" class="btn btn-default btn-xl page-scroll">
+                                    Find Location
+                                </a>
+                            </button>
+                            <hr>
+                            <button id="submit-to-google" type="submit" class="btn btn-default btn-xl" style="border: none; padding: 0;">
+                                <a id="submit-to-google-a" href="#map" class="btn btn-default btn-xl page-scroll"  onclick="$(this).closest('form').submit()">
+                                    Submit
+                                </a>
+                            </button>
+                        </div>
+                        </form>
 
                 </div>
             </div>
         </div>
     </section>
 
-    <div class="container-fluid no-padding">
+    <div class="container-fluid no-padding" style="">
         <div id="map-wrapper" class="col-lg-12 no-padding" style="height: 80vh">
             <div id="map" class="col-lg-12 no-padding"></div>
         </div>
